# MCP_Ygg

./: .env.example  .env.production.example  .flake8  .gitignore  .pre-commit-config.yaml  AI_Claim_Analyzer_Guide.markdown  AI_Claim_Analyzer_Guide.md  CLAUDE_SESSION.md  CONCEPT_PHILOSOPHY.md  Dockerfile  Makefile  PHASE_2_COMPLETION_REPORT 2.md  README.md  SESSION_OPTIMIZATION_GUIDE.md  UIplan.md  app_main.py  claude.md  claude_optimizing.md  docker-compose.override.yml  docker-compose.yml  docker-start.sh  final_readme.txt  foundation-fixes.md  geminireview.md  p_completed.md  plan.md  print_repo_structure.py  prompt.md  pyproject.toml  quick_performance_test.py  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  scraper_update.md  srape.sources.md  start_app.sh  test_aristotle_scraping_only.py  test_concept_discovery.py  test_scraper_performance.py
.claude/: settings.local.json
.claude/opus_update/: analysis.md
Agents/: Claim_Analyzer.py
CSV/art/: art_concepts.csv  art_people.csv  art_relationships.csv  art_works.csv
CSV/astrology/: astrology_people.csv  astrology_works.csv
CSV/import/: enhanced_neo4j_import_commands.cypher  neo4j_import_commands.cypher
CSV/language/: language_concepts.csv  language_people.csv  language_relationships.csv  language_works.csv
CSV/mathematics/: mathematics_concepts.csv  mathematics_people.csv  mathematics_relationships.csv  mathematics_works.csv
CSV/philosophy/: philosophy_concepts.csv  philosophy_people.csv  philosophy_relationships.csv  philosophy_works.csv
CSV/religion/: religion_people.csv  religion_works.csv
CSV/science/: science_concepts.csv  science_people.csv  science_relationships.csv  science_works.csv
CSV/shared/: cross_domain_relationships.csv  shared_places.csv  shared_time_periods.csv
CSV/technology/: technology_concepts.csv  technology_people.csv  technology_relationships.csv  technology_works.csv
CSV/vectors/: sync_metadata.csv
agents/: ENG-Handwritting2text_agent.md  greektranslater.md
agents/analytics/: base.py
agents/anomaly_detector/: anomaly_detector.py  data_fetcher.py  detectors.py  models.py
agents/backup/: backup_agent.py
agents/claim_analyzer/: README.md  __init__.py  checker.py  claim_analyzer.config  (+9 more)
analytics/: community_analysis.py  pattern_detection.py
api/: fastapi_main.py  simple_main.py
archive/: 01_database_manager_original.py.bak  03_file_manager_original.py.bak  06_analytics_original.py.bak  08_processing_queue_original.py.bak  claude.md.bak  claude2.md.bak  enhanced_vector_indexer_original.py.bak  text_processor_original.py.bak  visualization_agent_original.py.bak
cache/: __init__.py  cache_manager.py  config.py  integration_manager.py
chat_logs/: 2025-01-21_implementation-status-verification-update.md  2025-07-01_09-57.md  2025-07-01_15-59.md  2025-07-01_20-30.md  2025-07-03_current.md  2025-07-03_enhanced-content-pipeline.md  2025-07-04_11-00.md  2025-07-04_12-00.md  2025-07-06_11-33_implementation-completion.md  2025-07-06_12-00_project-updates-continuation.md  2025-07-06_concept-discovery-implementation.md  2025-07-06_scraping-performance-optimization.md  2025-07-07_session-continuation_implementation-status.md  2025-07-08_16-00_plan_md_update_session.md  2025-07-08_16-25.md  2025-07-08_22-15_agent-refactoring-continuation.md  2025-07-08_22-54_claim-analyzer-refactoring-completion.md  2025-07-14_12-00.md  2025-07-14_12-00_graph-analysis-refactoring.md  2025-07-14_14-30_streamlit-dashboard-refactoring.md  2025-07-14_18-15_streamlit-backup-and-continuation.md  2025-07-14_20-30_knowledge-tools-refactoring-completion.md  2025-07-15_05-39_visualization-agent-refactoring-completion.md  2025-07-15_06-06_phase1-completion-and-phase2-planning.md  2025-07-15_09-15_streamlit-backup-and-continuation.md  2025-07-15_19-00_phase2-performance-optimization-implementation.md  2025-07-15_20-00_project-status-analysis-and-documentation-update.md  2025-07-15_20-30_knowledge-tools-refactoring-completion.md  2025-07-16_21-30_context7-mcp-configuration-fix.md  2025-07-16_21-40session-phase2-continuation.md  2025-07-16_phase3-scraper-enhancement 2.md  2025-07-16_phase3-scraper-enhancement.md  2025-07-16_project-status-verification.md  2025-07-16_session-phase2-continuation.md  2025-07-21_implementation-status-verification-update.md  2025-07-22_08-45_phase1-completion-session.md  2025-07-22_13-49_phase-2-claim-analyzer-enhancement.md  2025-07-23_10-30_phase2-enhanced-ai-agents.md  2025-07-23_11-30_phase2-text-processor-anti-monolithic-refactoring.md  2025-07-23_12-30_phase2-completion-fastapi-celery.md  (+14 more)
config/: __init__.py  analysis_pipeline.yaml  config.yaml  config_manager.py  content_scraping.yaml  database_agents.yaml  loader.py  server.yaml  settings.py  visualization.yaml
data/: admin_password.txt  staging_manager.py  users.json
dependencies/: cli.py  config.py  requirements_manager.py
k8s/: k8s-deployment.yaml.txt
monitoring/: grafana_dashboard.json  mcp_yggdrasil_rules.yml  metrics.py  prometheus_config.yml  setup_monitoring.py
opus_update/: UIplan.md  critical_implementation.md  data_validation_pipeline_plan.md  refactoring.md
review/: geminireview.md  gemreview.md
scripts/: chat_logger.py  csv_cleanup_script.py  dependency_validation.py.txt  enhanced_yggdrasil_integrator.py  initialize_system.py  run_tests.py  yggdrasil_integrator.py
streamlit_workspace/: main_dashboard.py
summaries/: CSV_CLEANUP_SUMMARY.md  FULL_STACK_DEPLOYMENT_SUMMARY.md  HYBRID_ARCHITECTURE_SUMMARY.md
tasks/: __init__.py  analysis_tasks.py  celery_config.py  document_tasks.py  models.py  progress_tracker.py  scraping_tasks.py  sync_tasks.py  utils.py
tests/: conftest.py  test_cache_system.py  test_csv_import.py  test_hybrid_system.py
updates/: 01_foundation_fixes.md  02_performance_optimization.md  03_scraper_enhancement.md  04_data_validation.md  05.5_ui_api_update.md  05_ui_workspace.md  07_metrics_timeline.md  08_repository_structure.md  09_implementation_status.md  Opus_Update_Overview.md  critical_project_review.md  final_testing_implementation.md
(+290 files in other folders)
